src/botadi/mokadi/grammars/MokadiGrammar_frParser.py
# Generated from \MokadiGrammar_fr.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MokadiGrammar_frParser (Parser):

    grammarFileName = "MokadiGrammar_fr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'('", "')'", "'MOKADI'", "'mokadie'",
                    "'leocadie'", "'Leocadie'", "'humeur'", "'powerpoint'",
                    "'plantation'", "'nouvelles'", "'nouvelle'", "'news'",
                    "'informations'", "'information'", "'nouveau'", "'nouveaux'",
                    "'propos'", "'sur'", "'mail'", "'mails'", "'email'",
                    "'mel'", "'emails'", "'mels'", "'lit'", "'voir'", "'list'",
                    "'lire'", "'liste'", "'lister'", "'quelles'", "'sont'",
                    "'quel'", "'quelle'", "'est'", "'les'", "'le'", "'la'",
                    "'du'", "'de'", "'des'", "'en'", "'mon'", "'ma'", "'mes'",
                    "'?'", "'un'", "'deux'", "'trois'", "'quatre'", "'cinq'",
                    "'six'", "'sept'", "'huit'", "'neuf'", "'dix'", "'onze'",
                    "'douze'", "'treize'", "'vingt'", "'trente'", "'cinquante'",
                    "'cent'", "'s'", "'mille'", "'million'", "'millard'",
                    "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'",
                    "'=='", "'!='", "'<='", "'>='", "'>'", "'<'", "'.'",
                    "'e'", "<INVALID>", "<INVALID>", "'entier'"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "Numero", "Dernieres",
                     "Entier", "Recent", "Synonym", "Definition", "Presentation",
                     "Slide", "Transparent", "Astopword", "Digits", "Sign",
                     "Identifier", "STRING", "STRING_DOUBLE_QUOTE", "LINE_COMMENT",
                     "WS"]

    RULE_parse = 0
    RULE_expression_stmt = 1
    RULE_expression = 2
    RULE_slides_stmt = 3
    RULE_mail_stmt = 4
    RULE_news_stmt = 5
    RULE_news_query = 6
    RULE_emotion_stmt = 7
    RULE_anything_stmt = 8
    RULE_word_name_ext = 9
    RULE_mokadi = 10
    RULE_humeur = 11
    RULE_numero = 12
    RULE_presentation = 13
    RULE_news = 14
    RULE_time_indication = 15
    RULE_with_body = 16
    RULE_entier = 17
    RULE_definition = 18
    RULE_synonyme = 19
    RULE_apropos = 20
    RULE_slides = 21
    RULE_mails = 22
    RULE_verb_voir = 23
    RULE_stop_words = 24
    RULE_possessif_me = 25
    RULE_questions_mark = 26
    RULE_integer_number_string = 27
    RULE_number_name = 28
    RULE_word_name = 29
    RULE_operator = 30
    RULE_question = 31
    RULE_constant_number = 32
    RULE_integer_number = 33
    RULE_real_number = 34

    ruleNames = ["parse", "expression_stmt", "expression", "slides_stmt",
                 "mail_stmt", "news_stmt", "news_query", "emotion_stmt",
                 "anything_stmt", "word_name_ext", "mokadi", "humeur",
                 "numero", "presentation", "news", "time_indication",
                 "with_body", "entier", "definition", "synonyme", "apropos",
                 "slides", "mails", "verb_voir", "stop_words", "possessif_me",
                 "questions_mark", "integer_number_string", "number_name",
                 "word_name", "operator", "question", "constant_number",
                 "integer_number", "real_number"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    T__36 = 37
    T__37 = 38
    T__38 = 39
    T__39 = 40
    T__40 = 41
    T__41 = 42
    T__42 = 43
    T__43 = 44
    T__44 = 45
    T__45 = 46
    T__46 = 47
    T__47 = 48
    T__48 = 49
    T__49 = 50
    T__50 = 51
    T__51 = 52
    T__52 = 53
    T__53 = 54
    T__54 = 55
    T__55 = 56
    T__56 = 57
    T__57 = 58
    T__58 = 59
    T__59 = 60
    T__60 = 61
    T__61 = 62
    T__62 = 63
    T__63 = 64
    T__64 = 65
    T__65 = 66
    T__66 = 67
    T__67 = 68
    T__68 = 69
    T__69 = 70
    T__70 = 71
    T__71 = 72
    T__72 = 73
    T__73 = 74
    T__74 = 75
    T__75 = 76
    T__76 = 77
    T__77 = 78
    T__78 = 79
    T__79 = 80
    T__80 = 81
    T__81 = 82
    Numero = 83
    Dernieres = 84
    Entier = 85
    Recent = 86
    Synonym = 87
    Definition = 88
    Presentation = 89
    Slide = 90
    Transparent = 91
    Astopword = 92
    Digits = 93
    Sign = 94
    Identifier = 95
    STRING = 96
    STRING_DOUBLE_QUOTE = 97
    LINE_COMMENT = 98
    WS = 99

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mokadi(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.MokadiContext, 0)

        def expression_stmt(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Expression_stmtContext, 0)

        def EOF(self):
            return self.getToken(MokadiGrammar_frParser.EOF, 0)

        def questions_mark(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Questions_markContext, 0)

        def getRuleIndex(self):
            return MokadiGrammar_frParser.RULE_parse

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParse"):
                listener.enterParse(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParse"):
                listener.exitParse(self)

    def parse(self):

        localctx = MokadiGrammar_frParser.ParseContext(
            self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.mokadi()
            self.state = 71
            self.expression_stmt()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == MokadiGrammar_frParser.T__45:
                self.state = 72
                self.questions_mark()

            self.state = 75
            self.match(MokadiGrammar_frParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expression_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return MokadiGrammar_frParser.RULE_expression_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpression_stmt"):
                listener.enterExpression_stmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpression_stmt"):
                listener.exitExpression_stmt(self)

    def expression_stmt(self):

        localctx = MokadiGrammar_frParser.Expression_stmtContext(
            self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression_stmt)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MokadiGrammar_frParser.T__6, MokadiGrammar_frParser.T__7, MokadiGrammar_frParser.T__8, MokadiGrammar_frParser.T__9, MokadiGrammar_frParser.T__10, MokadiGrammar_frParser.T__11, MokadiGrammar_frParser.T__12, MokadiGrammar_frParser.T__13, MokadiGrammar_frParser.T__14, MokadiGrammar_frParser.T__15, MokadiGrammar_frParser.T__17, MokadiGrammar_frParser.T__24, MokadiGrammar_frParser.T__25, MokadiGrammar_frParser.T__26, MokadiGrammar_frParser.T__27, MokadiGrammar_frParser.T__28, MokadiGrammar_frParser.T__29, MokadiGrammar_frParser.T__30, MokadiGrammar_frParser.T__32, MokadiGrammar_frParser.T__33, MokadiGrammar_frParser.T__35, MokadiGrammar_frParser.T__36, MokadiGrammar_frParser.T__37, MokadiGrammar_frParser.T__38, MokadiGrammar_frParser.T__39, MokadiGrammar_frParser.T__40, MokadiGrammar_frParser.T__41, MokadiGrammar_frParser.T__42, MokadiGrammar_frParser.T__43, MokadiGrammar_frParser.T__44, MokadiGrammar_frParser.T__67, MokadiGrammar_frParser.T__68, MokadiGrammar_frParser.T__69, MokadiGrammar_frParser.T__70, MokadiGrammar_frParser.T__71, MokadiGrammar_frParser.T__72, MokadiGrammar_frParser.T__73, MokadiGrammar_frParser.T__74, MokadiGrammar_frParser.T__75, MokadiGrammar_frParser.T__76, MokadiGrammar_frParser.T__77, MokadiGrammar_frParser.T__78, MokadiGrammar_frParser.T__79, MokadiGrammar_frParser.Numero, MokadiGrammar_frParser.Dernieres, MokadiGrammar_frParser.Entier, MokadiGrammar_frParser.Recent, MokadiGrammar_frParser.Synonym, MokadiGrammar_frParser.Definition, MokadiGrammar_frParser.Presentation, MokadiGrammar_frParser.Slide, MokadiGrammar_frParser.Transparent, MokadiGrammar_frParser.Astopword, MokadiGrammar_frParser.Digits, MokadiGrammar_frParser.Sign, MokadiGrammar_frParser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.expression()
                pass
            elif token in [MokadiGrammar_frParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(MokadiGrammar_frParser.T__0)
                self.state = 79
                self.expression()
                self.state = 80
                self.match(MokadiGrammar_frParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def slides_stmt(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Slides_stmtContext, 0)

        def mail_stmt(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Mail_stmtContext, 0)

        def news_stmt(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.News_stmtContext, 0)

        def emotion_stmt(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Emotion_stmtContext, 0)

        def anything_stmt(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Anything_stmtContext, 0)

        def getRuleIndex(self):
            return MokadiGrammar_frParser.RULE_expression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)

    def expression(self):

        localctx = MokadiGrammar_frParser.ExpressionContext(
            self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.slides_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.mail_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.news_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.emotion_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.anything_stmt()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Slides_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def verb_voir(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Verb_voirContext, 0)

        def presentation(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.PresentationContext, 0)

        def stop_words(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Stop_wordsContext, 0)

        def integer_number_string(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(MokadiGrammar_frParser.Integer_number_stringContext)
            else:
                return self.getTypedRuleContext(MokadiGrammar_frParser.Integer_number_stringContext, i)

        def slides(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.SlidesContext, 0)

        def numero(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.NumeroContext, 0)

        def getRuleIndex(self):
            return MokadiGrammar_frParser.RULE_slides_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSlides_stmt"):
                listener.enterSlides_stmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSlides_stmt"):
                listener.exitSlides_stmt(self)

    def slides_stmt(self):

        localctx = MokadiGrammar_frParser.Slides_stmtContext(
            self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_slides_stmt)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.verb_voir()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 36)) & ~0x3f) == 0 and ((1 << (_la - 36)) & ((1 << (MokadiGrammar_frParser.T__35 - 36)) | (1 << (MokadiGrammar_frParser.T__36 - 36)) | (1 << (MokadiGrammar_frParser.T__37 - 36)) | (1 << (MokadiGrammar_frParser.T__38 - 36)) | (1 << (MokadiGrammar_frParser.T__39 - 36)) | (1 << (MokadiGrammar_frParser.T__40 - 36)) | (1 << (MokadiGrammar_frParser.T__41 - 36)) | (1 << (MokadiGrammar_frParser.Astopword - 36)))) != 0):
                self.state = 92
                self.stop_words()

            self.state = 95
            self.presentation()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 47)) & ~0x3f) == 0 and ((1 << (_la - 47)) & ((1 << (MokadiGrammar_frParser.T__46 - 47)) | (1 << (MokadiGrammar_frParser.T__47 - 47)) | (1 << (MokadiGrammar_frParser.T__48 - 47)) | (1 << (MokadiGrammar_frParser.T__49 - 47)) | (1 << (MokadiGrammar_frParser.T__50 - 47)) | (1 << (MokadiGrammar_frParser.T__51 - 47)) | (1 << (MokadiGrammar_frParser.T__52 - 47)) | (1 << (MokadiGrammar_frParser.T__53 - 47)) | (1 << (MokadiGrammar_frParser.T__54 - 47)) | (1 << (MokadiGrammar_frParser.T__55 - 47)) | (1 << (MokadiGrammar_frParser.T__56 - 47)) | (1 << (MokadiGrammar_frParser.T__57 - 47)) | (1 << (MokadiGrammar_frParser.T__58 - 47)) | (1 << (MokadiGrammar_frParser.T__59 - 47)) | (1 << (MokadiGrammar_frParser.T__60 - 47)) | (1 << (MokadiGrammar_frParser.T__61 - 47)) | (1 << (MokadiGrammar_frParser.T__62 - 47)) | (1 << (MokadiGrammar_frParser.T__64 - 47)) | (1 << (MokadiGrammar_frParser.T__65 - 47)) | (1 << (MokadiGrammar_frParser.T__66 - 47)) | (1 << (MokadiGrammar_frParser.Digits - 47)) | (1 << (MokadiGrammar_frParser.Sign - 47)))) != 0):
                self.state = 96
                self.integer_number_string()
                self.state = 97
                self.slides()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == MokadiGrammar_frParser.Numero:
                    self.state = 98
                    self.numero()

                self.state = 101
                self.integer_number_string()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mail_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def verb_voir(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Verb_voirContext, 0)

        def mails(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.MailsContext, 0)

        def stop_words(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Stop_wordsContext, 0)

        def time_indication(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Time_indicationContext, 0)

        def integer_number_string(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(MokadiGrammar_frParser.Integer_number_stringContext)
            else:
                return self.getTypedRuleContext(MokadiGrammar_frParser.Integer_number_stringContext, i)

        def numero(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.NumeroContext, 0)

        def with_body(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.With_bodyContext, 0)

        def getRuleIndex(self):
            return MokadiGrammar_frParser.RULE_mail_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMail_stmt"):
                listener.enterMail_stmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMail_stmt"):
                listener.exitMail_stmt(self)

    def mail_stmt(self):

        localctx = MokadiGrammar_frParser.Mail_stmtContext(
            self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mail_stmt)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.verb_voir()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 36)) & ~0x3f) == 0 and ((1 << (_la - 36)) & ((1 << (MokadiGrammar_frParser.T__35 - 36)) | (1 << (MokadiGrammar_frParser.T__36 - 36)) | (1 << (MokadiGrammar_frParser.T__37 - 36)) | (1 << (MokadiGrammar_frParser.T__38 - 36)) | (1 << (MokadiGrammar_frParser.T__39 - 36)) | (1 << (MokadiGrammar_frParser.T__40 - 36)) | (1 << (MokadiGrammar_frParser.T__41 - 36)) | (1 << (MokadiGrammar_frParser.Astopword - 36)))) != 0):
                self.state = 106
                self.stop_words()

            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MokadiGrammar_frParser.T__9) | (1 << MokadiGrammar_frParser.T__10) | (1 << MokadiGrammar_frParser.T__14) | (1 << MokadiGrammar_frParser.T__15))) != 0) or _la == MokadiGrammar_frParser.Dernieres or _la == MokadiGrammar_frParser.Recent:
                self.state = 109
                self.time_indication()

            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 47)) & ~0x3f) == 0 and ((1 << (_la - 47)) & ((1 << (MokadiGrammar_frParser.T__46 - 47)) | (1 << (MokadiGrammar_frParser.T__47 - 47)) | (1 << (MokadiGrammar_frParser.T__48 - 47)) | (1 << (MokadiGrammar_frParser.T__49 - 47)) | (1 << (MokadiGrammar_frParser.T__50 - 47)) | (1 << (MokadiGrammar_frParser.T__51 - 47)) | (1 << (MokadiGrammar_frParser.T__52 - 47)) | (1 << (MokadiGrammar_frParser.T__53 - 47)) | (1 << (MokadiGrammar_frParser.T__54 - 47)) | (1 << (MokadiGrammar_frParser.T__55 - 47)) | (1 << (MokadiGrammar_frParser.T__56 - 47)) | (1 << (MokadiGrammar_frParser.T__57 - 47)) | (1 << (MokadiGrammar_frParser.T__58 - 47)) | (1 << (MokadiGrammar_frParser.T__59 - 47)) | (1 << (MokadiGrammar_frParser.T__60 - 47)) | (1 << (MokadiGrammar_frParser.T__61 - 47)) | (1 << (MokadiGrammar_frParser.T__62 - 47)) | (1 << (MokadiGrammar_frParser.T__64 - 47)) | (1 << (MokadiGrammar_frParser.T__65 - 47)) | (1 << (MokadiGrammar_frParser.T__66 - 47)) | (1 << (MokadiGrammar_frParser.Digits - 47)) | (1 << (MokadiGrammar_frParser.Sign - 47)))) != 0):
                self.state = 112
                self.integer_number_string()

            self.state = 115
            self.mails()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 47)) & ~0x3f) == 0 and ((1 << (_la - 47)) & ((1 << (MokadiGrammar_frParser.T__46 - 47)) | (1 << (MokadiGrammar_frParser.T__47 - 47)) | (1 << (MokadiGrammar_frParser.T__48 - 47)) | (1 << (MokadiGrammar_frParser.T__49 - 47)) | (1 << (MokadiGrammar_frParser.T__50 - 47)) | (1 << (MokadiGrammar_frParser.T__51 - 47)) | (1 << (MokadiGrammar_frParser.T__52 - 47)) | (1 << (MokadiGrammar_frParser.T__53 - 47)) | (1 << (MokadiGrammar_frParser.T__54 - 47)) | (1 << (MokadiGrammar_frParser.T__55 - 47)) | (1 << (MokadiGrammar_frParser.T__56 - 47)) | (1 << (MokadiGrammar_frParser.T__57 - 47)) | (1 << (MokadiGrammar_frParser.T__58 - 47)) | (1 << (MokadiGrammar_frParser.T__59 - 47)) | (1 << (MokadiGrammar_frParser.T__60 - 47)) | (1 << (MokadiGrammar_frParser.T__61 - 47)) | (1 << (MokadiGrammar_frParser.T__62 - 47)) | (1 << (MokadiGrammar_frParser.T__64 - 47)) | (1 << (MokadiGrammar_frParser.T__65 - 47)) | (1 << (MokadiGrammar_frParser.T__66 - 47)) | (1 << (MokadiGrammar_frParser.Numero - 47)) | (1 << (MokadiGrammar_frParser.Digits - 47)) | (1 << (MokadiGrammar_frParser.Sign - 47)))) != 0):
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == MokadiGrammar_frParser.Numero:
                    self.state = 116
                    self.numero()

                self.state = 119
                self.integer_number_string()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((((_la - 36)) & ~0x3f) == 0 and ((1 << (_la - 36)) & ((1 << (MokadiGrammar_frParser.T__35 - 36)) | (1 << (MokadiGrammar_frParser.T__36 - 36)) | (1 << (MokadiGrammar_frParser.T__37 - 36)) | (1 << (MokadiGrammar_frParser.T__38 - 36)) | (1 << (MokadiGrammar_frParser.T__39 - 36)) | (1 << (MokadiGrammar_frParser.T__40 - 36)) | (1 << (MokadiGrammar_frParser.T__41 - 36)) | (1 << (MokadiGrammar_frParser.Astopword - 36)))) != 0):
                    self.state = 120
                    self.with_body()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class News_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def verb_voir(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Verb_voirContext, 0)

        def news(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.NewsContext, 0)

        def news_query(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.News_queryContext, 0)

        def stop_words(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Stop_wordsContext, 0)

        def time_indication(self):
            return self.getTypedRuleContext(MokadiGrammar_frParser.Time_indicationContext, 0)

        def getRuleIndex(self):
            return MokadiGrammar_frParser.RULE_news_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNews_stmt"):
                listener.enterNews_stmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNews_stmt"):
                listener.exitNews_stmt(self)

    def news_stmt(self):
